@@ -4,6 +4,7 @@
 * + support for dragging files from Nautilus (or Konqueror, or anything that
   delivers URIs). Closes Launchpad (Ubuntu) bug #515854:
   (Drag and drop PDF from Nautilus should import PDF)
+* + support for brackets in imported djvu hidden layer
 
 
 1.5.5 (23.10.2016):
